config/argocd/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-middleware
  namespace: argocd
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
