config/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    # Important annotation for external-dns to create the DNS record
    external-dns.alpha.kubernetes.io/hostname: "argocd.everythingascode.dev"
    # If ArgoCD is configured with HTTPS, we need to handle GRPC as well
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
    traefik.ingress.kubernetes.io/service.serverstransport: "insecure@file"
spec:
  rules:
  - host: argocd.everythingascode.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  tls:
  - hosts:
    - argocd.everythingascode.dev
    secretName: argocd-server-tls
